# ign-pdal-tools

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Dockerfile.combined  Dockerfile.pdal  Dockerfile.pdal-source  Jenkinsfile  Makefile  README.md  environment.yml  pyproject.toml
.github/workflows/: cicd.yml  cicd_deploy.yml  cicd_full.yml  cicd_light.yml  (+1 more)
docker/: Dockerfile  build.sh  clean.sh  conda_pack.sh  deploy-jenkins.sh  deploy.sh
pdaltools/: _version.py  add_points_in_las.py  add_points_in_pointcloud.py  check_las.py  color.py  count_occurences_for_attribute.py  create_random_laz.py  download_image.py  las_add_buffer.py  las_add_extra_dims_from_las.py  las_clip.py  las_compare_classification.py  las_comparison.py  las_info.py  las_merge.py  las_remove_dimensions.py  las_rename_dimension.py  pcd_info.py  pdal_tools.py  replace_area_in_pointcloud.py  replace_attribute_in_las.py  run_pdal_pipeline.py  standardize_format.py  transform_geo.py  unlock_file.py
test/: test_add_points_in_las.py  test_add_points_in_pointcloud.py  test_check_las.py  test_color.py  test_count_occurences_for_attribute.py  test_create_random_laz.py  test_download_image.py  test_las_add_buffer.py  test_las_add_extra_dims_from_las.py  test_las_clip.py  test_las_compare_classification.py  test_las_comparison.py  test_las_info.py  test_las_merge.py  test_las_remove_dimensions.py  test_las_rename_dimension.py  test_pcd_info.py  test_pdal.py  test_pdal_custom.py  test_replace_area_in_pointcloud.py  test_replace_attribute_in_las.py  test_replace_values_in_las.py  test_run_pdal_pipeline.py  test_standardize_format.py  test_transform_geo.py  test_unlock.py  utils.py
tools/: color.py
(+81 files in other folders)
