[project]
name = "ign-pdal-tools"
dynamic = ["version"]
description = "Library for common LAS files manipulation with PDAL"
readme = "README.md"
authors = [{ name = "Guillaume Liegard", email = "guillaume.liegard@ign.fr" }]

[tool.setuptools.dynamic]
version = { attr = "pdaltools._version.__version__" }
[tool.setuptools]
packages = ["pdaltools"]

[tool.pytest.ini_options]
markers = [
  "geopf: marks tests that request the (sometimes unreliable) data.geopf.fr",
  "pdal: marks tests wich test some PDAL features (especialy feature only available in a modern version of PDAL)",
]

[tool.black]
line-length = 119
include = '\.pyi?$'
exclude = '''
/(
  \.toml
  |\.sh
  |\.git
  |\.ini
  |\.bat
  | data
)/
'''
